--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-um">O Colégio Estadual Marcílio Dias chamava-se Grupo Escolar 25 de Dezembro, até 1960, no mesmo ano é denominado por decreto, Grupo Escolar Professor Antônio Barbosa Pinto. Em Maio do mesmo ano é criado o curso de Normal Regional Marcílio Dias, ambos no Governo de Moisés Lupion, que passou a funcionar naquele ano letivo.</p>
+            <p class="escola-texto-dois"></p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
@@ -69,7 +69,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
-            <h3 class="estudante-nome">Olivia</h3>
+            <h3 class="estudante-nome">Hariel</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
